@@ -1140,8 +1140,8 @@
     <copy todir="${system-test-build-dir}/${final.name}/conf">
       <fileset dir="${test.src.dir}/system/conf/"/>
     </copy>
-    <copy tofile="${system-test-build-dir}/${final.name}/lib/hadoop-common-${version}.jar"
-      file="${system-test-build-dir}/ivy/lib/${ant.project.name}/system/hadoop-common-${herriot.suffix}-${version}.jar"
+    <copy tofile="${system-test-build-dir}/${final.name}/lib/hadoop-common-${hadoop-common.version}.jar"
+      file="${system-test-build-dir}/ivy/lib/${ant.project.name}/system/hadoop-common-${herriot.suffix}-${hadoop-common.version}.jar"
       overwrite="true"/>
     <copy tofile="${system-test-build-dir}/${final.name}/${final.name}.jar"
       file="${system-test-build-dir}/${instrumented.final.name}.jar" overwrite="true"/>
